Adding scripts to export mappings from db or wiremock

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write .",
-    "wiremock-import": "node scripts/wiremock-import-mappings-from-db.js",
-    "wiremock-serve": "wiremock --root-dir ./wiremock --port 8081",
-    "express-serve": "node express.js",
-    "mongodb-serve": "cd mongodb && mongod --dbpath=./db",
-    "mongodb-migrate": "cd mongodb && migrate-mongo up",
-    "serve": "concurrently 'npm run wiremock-serve' 'npm run express-serve'",
+    "wiremock:db-import": "node scripts/wiremock-import-mappings-from-db.js",
+    "wiremock:json-export": "node scripts/wiremock-export-mappings-to-json.js",
+    "wiremock:serve": "wiremock --root-dir ./wiremock --port 8081",
+    "express:serve": "node express.js",
+    "db:json-export": "node scripts/db-export-mappings-to-json.js",
+    "db:serve": "mkdir -p mongodb/db && cd mongodb && mongod --dbpath=./db",
+    "db:migrate": "cd mongodb && migrate-mongo up",
+    "serve": "concurrently 'npm run wiremock:serve' 'npm run express:serve'",
     "start": "npm run serve"
   },
   "author": "",
