--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^2.8.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "migrate-mongo": "^9.0.0",
     "mongodb": "^5.1.0",
